test/files/tokenizer/errors/eof-number.otest
name = "End of file in number"
line = 2
character = 6
error = "Expected digits after decimal point."

---

1234.